--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background-image: url("./static/boardBackground.jpeg");
   /* background-repeat: no-repeat; */
   background-size: cover;
-  color: white;
+  /* color: white; */
 }
 
 code {
